# RPAI_Sim

./: README.md
PA_simulator/: CMakeLists.txt  README.md  package.xml  requirements.txt
PA_simulator/launch/: simulator.launch
PA_simulator/scripts/: autocontrol.py  simulator.py  vessel_pose.py
PA_simulator/scripts/utils/: util.py
PA_simulator/src/: simulator.cpp
k_wave_simulation/: CMakeLists.txt  REMEAD.md  package.xml  requirements.txt
k_wave_simulation/scripts/: kwave_ros_simulator_2d.py  kwave_ros_simulator_3d.py
k_wave_simulation/src/: kwave_ros_simulator_2d.cpp
ur3/: CMakeLists.txt  package.xml
ur3/cfg/: view_robot.rviz
ur3/config/ur3/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
ur3/launch/: load_ur.launch  load_ur3.launch  view_ur3.launch
ur3/scripts/: ur3_virtual_controller.py
ur3/tests/: roslaunch_test_ur3.xml
ur3/urdf/: frames.gv  ur.xacro
ur3/urdf/.ipynb_checkpoints/: ur3-checkpoint.xacro
ur3/urdf/inc/: ur_common.xacro  ur_macro.xacro
ur3/urdf/inc/.ipynb_checkpoints/: ur3_macro-checkpoint.xacro
