<?xml version="1.0"?>
<package format="2">
  <name>pa_simulator</name>
  <version>0.0.0</version>
  <description>pa_simulator ROS Package</description>
  <maintainer email="zhy26399@outlook.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
</package>